<resources>
    <string name="app_name">Restaurant</string>

    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="delivery">派送</string>
    <string name="check">查看</string>
    <string name="check_order_list">订单列表</string>
    <string name="submit">提交</string>
    <string name="customer_phone">客户电话</string>
    <string name="customer_address">客户地址</string>
    <string name="price">价格</string>
    <string name="remark">备注</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint">提示</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_list">所有订单</string>
    <string name="my_list">我的订单</string>
    <string name="real_time_location">实时位置</string>
    <string name="receive_order">接单</string>
    <string name="confirm_receive">确认送达</string>
    <string name="notice">注意</string>
    <string name="confirm_text">请再次确认货物是否送达，否则钱货两空！</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="driver">Driver</string>
    <string name="order_status_waiting">等待</string>
    <string name="order_status_deliverying">正在派送中</string>
    <string name="order_status_finish">已完成</string>
    <string name="order_search">搜索</string>
    <string name="order_all_status">全部订单</string>
    <string name="location_manual">手动定位</string>
    <string name="location_failed_prompt">若定位失败，请点击右上角角标进行手动定位。</string>
    <string name="manual_location">请输入当前位置</string>
</resources>
